index.html header
* filling with content

--- a/style/style.css
+++ b/style/style.css
@@ -10,4 +10,35 @@
   padding-left: calc( 50% - 1160px/2);
   padding-right: calc( 50% - 1160px/2);
 }
+
+.header {
+  min-height: 100px;
+  background-color: #2F3132;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.header__nav__section {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 14px;
+  color: #FFF;
+  padding: 8px 22px;
+  border-left: 1px solid #494949;
+}
 /*# sourceMappingURL=style.css.map */
