--- a/style/style.sass
+++ b/style/style.sass
@@ -7,3 +7,25 @@
 .center
     padding-left: calc( 50% - 1160px/2 )
     padding-right: calc( 50% - 1160px/2 )
+
+.header
+    min-height: 100px
+    background-color: #2F3132
+    display: flex
+    justify-content: space-between
+    align-items: center
+    &__logo
+    &__nav
+        display: flex
+        &__section
+            font-family: Roboto
+            font-style: normal
+            font-weight: 500
+            font-size: 12px
+            line-height: 14px
+            color: #FFF
+            padding: 8px 22px
+            border-left: 1px solid #494949
+            &:not-last
+                
+
