--- a/style/style.sass
+++ b/style/style.sass
@@ -1,31 +1,58 @@
 *
-    font-family: 'Roboto', sans-serif
-    margin: 0
-    padding: 0
-    outline: none
-    text-decoration: none
+  font-family: 'Roboto', sans-serif
+  margin: 0
+  padding: 0
+  outline: none
+  text-decoration: none
 .center
-    padding-left: calc( 50% - 1160px/2 )
-    padding-right: calc( 50% - 1160px/2 )
+  padding-left: calc( 50% - 1160px/2 )
+  padding-right: calc( 50% - 1160px/2 )
 
 .header
-    min-height: 100px
-    background-color: #2F3132
+  min-height: 100px
+  background-color: #2F3132
+  display: flex
+  justify-content: space-between
+  align-items: center
+  &__logo
+  &__nav
     display: flex
-    justify-content: space-between
-    align-items: center
-    &__logo
-    &__nav
-        display: flex
-        &__section
-            font-family: Roboto
-            font-style: normal
-            font-weight: 500
-            font-size: 12px
-            line-height: 14px
-            color: #FFF
-            padding: 8px 22px
-            border-left: 1px solid #494949
-            &:not-last
-                
+    &__section
+      font-family: Roboto
+      font-style: normal
+      font-weight: 500
+      font-size: 12px
+      line-height: 14px
+      color: #FFF
+      padding: 8px 22px
+      border-left: 1px solid #494949  
 
+.mainProduct
+  background: #E0E1E2
+  height: 880px
+  position: relative
+  &__text-h2
+    position: absolute
+    z-index: 1
+    width: 495px
+    height: 42px
+    left: 713px
+    top: 100px
+    font-style: normal
+    font-weight: 900
+    font-size: 36px
+    line-height: 42px
+    text-align: center
+    color: #2F3132
+  &__img
+    z-index: 0
+    position: absolute
+    width: 1160px
+    height: 671px
+    left: 380px
+    top: 20px
+
+    background: url(MX-Master.png)
+    border: 1px solid #000000
+    box-sizing: border-box
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
