--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,24 @@
   padding-right: calc( 50% - 1160px/2);
 }
 
+.text-p {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+}
+
+.text-h2 {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 42px;
+  text-align: center;
+}
+
 .header {
   min-height: 100px;
   background-color: #2F3132;
@@ -49,18 +67,12 @@
 }
 
 .mainProduct__text-h2 {
-  position: absolute;
+  position: -webkit-sticky;
+  position: sticky;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 100px;
   z-index: 1;
-  width: 495px;
-  height: 42px;
-  left: 713px;
-  top: 100px;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  color: #2F3132;
 }
 
 .mainProduct__img {
@@ -68,13 +80,26 @@
   position: absolute;
   width: 1160px;
   height: 671px;
-  left: 380px;
   top: 20px;
-  background: url(MX-Master.png);
   border: 1px solid #000000;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.mainProduct__text-p {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1161px;
+  top: 699px;
+}
+
+.mainProduct__arrow {
+  position: absolute;
+  width: 1160px;
+  height: 29px;
+  top: 771px;
 }
 /*# sourceMappingURL=style.css.map */
