--- a/style/style.sass
+++ b/style/style.sass
@@ -70,3 +70,20 @@
     width: 1160px
     height: 29px
     top: 771px
+.mouseOperation
+  height: 809px
+  background: #EDEDED
+  position: relative
+  &__bluetooth
+    position: absolute
+    left: 49.27%
+    right: 49.61%
+    top: 9.88%
+    bottom: 85.19%
+  &__text-h2
+    position: sticky
+    padding-top: 155px
+    width: 270px
+    height: 41px
+    margin-left: auto
+    margin-right: auto
